k8s/multi-cluster-lb-setup/cluster1/cluster1-gateway-config.yaml
# to be applied to Cluster1
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: apps-http
spec:
  gatewayClassName: gke-l7-rilb-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway: apps-http
